tests/vendor/valid/simple/assign_val_in_init.c
//expect 5
//tags: simple, assignment, variables
int main() {
    int a = a = 5;
    return a;
}