tests/vendor/invalid/semantics/undeclared_var_compare.c
//tags: simple, binary, logical, undeclared
int main() {
    return a < 5;
}